--- a/play/html-play-presentation/index.html
+++ b/play/html-play-presentation/index.html
@@ -37,7 +37,7 @@
       </div>
       <div class="center">Home</div>
     </ons-toolbar>
-    <div id="pigfucker"></div>
+    <div id="homeid"></div>
     <p style="text-align: center; opacity: 0.6; padding: 20px;">
       This is the home page.
     </p>
@@ -53,7 +53,7 @@
       </div>
       <div class="center">Test</div>
     </ons-toolbar>
-    <div id="cocksucker"></div>
+    <div id="testid"></div>
     <p style="text-align: center; opacity: 0.6; padding: 20px;">
       test test test test test test test test test test
     </p>
