--- a/play/prototype/index.html
+++ b/play/prototype/index.html
@@ -231,135 +231,132 @@
       <div class="center">About</div>
     </ons-toolbar>
 
+    <ons-list>
+      <ons-card>
+        <div class="content">
+          <ons-list modifier="noborder">
+            <ons-list-header class="list-card-header">
+              <ons-row>
+                <ons-col class="list-card-col" align="right" width="25%"><b>Full Name</b></ons-col>
+                <ons-col width="2.5%"></ons-col>
+                <ons-col class="list-card-col">Sean Thomas Smith</ons-col>
+              </ons-row>
+            </ons-list-header>
+            <ons-list-item modifier="nodivider" style="padding: 0;height:24px; min-height: 24px">
+              <ons-row>
+                <ons-col align="right" width="25%"><b>Age</b></ons-col>
+                <ons-col width="2.5%"></ons-col>
+                <ons-col>25</ons-col>
+              </ons-row>
+            </ons-list-item>
+            <ons-list-item modifier="nodivider" style="padding: 0;height:24px; min-height: 24px">
+              <ons-row>
+                <ons-col align="right" width="25%"><b>Address</b></ons-col>
+                <ons-col width="2.5%"></ons-col>
+                <ons-col>1122 Boogy Woogy Avenue</ons-col>
+              </ons-row>
+            </ons-list-item>
+            <ons-list-item modifier="nodivider" style="padding: 0;height:24px; min-height: 24px">
+              <ons-row>
+                <ons-col align="right" width="25%"><b>City</b></ons-col>
+                <ons-col width="2.5%"></ons-col>
+                <ons-col>Point Pleasant Beach</ons-col>
+              </ons-row>
+            </ons-list-item>
+            <ons-list-item modifier="nodivider" style="padding: 0;height:24px; min-height: 24px">
+              <ons-row>
+                <ons-col align="right" width="25%"><b>State</b></ons-col>
+                <ons-col width="2.5%"></ons-col>
+                <ons-col>NJ</ons-col>
+              </ons-row>
+            </ons-list-item>
+            <ons-list-item style="padding: 0;height:12px; min-height: 12px">
+            </ons-list-item>
+          </ons-list>
+        </div>
+      </ons-card>
 
-
-
-    <ons-card>
-      <div class="content">
-        <ons-list modifier="noborder">
-          <ons-list-header class="list-card-header">
-            <ons-row>
-              <ons-col class="list-card-col" align="right" width="25%"><b>Full Name</b></ons-col>
-              <ons-col width="2.5%"></ons-col>
-              <ons-col class="list-card-col">Sean Thomas Smith</ons-col>
-            </ons-row>
-          </ons-list-header>
-          <ons-list-item modifier="nodivider" style="padding: 0;height:24px; min-height: 24px">
-            <ons-row>
-              <ons-col align="right" width="25%"><b>Age</b></ons-col>
-              <ons-col width="2.5%"></ons-col>
-              <ons-col>25</ons-col>
-            </ons-row>
-          </ons-list-item>
-          <ons-list-item modifier="nodivider" style="padding: 0;height:24px; min-height: 24px">
-            <ons-row>
-              <ons-col align="right" width="25%"><b>Address</b></ons-col>
-              <ons-col width="2.5%"></ons-col>
-              <ons-col>1122 Boogy Woogy Avenue</ons-col>
-            </ons-row>
-          </ons-list-item>
-          <ons-list-item modifier="nodivider" style="padding: 0;height:24px; min-height: 24px">
-            <ons-row>
-              <ons-col align="right" width="25%"><b>City</b></ons-col>
-              <ons-col width="2.5%"></ons-col>
-              <ons-col>Point Pleasant Beach</ons-col>
-            </ons-row>
-          </ons-list-item>
-          <ons-list-item modifier="nodivider" style="padding: 0;height:24px; min-height: 24px">
-            <ons-row>
-              <ons-col align="right" width="25%"><b>State</b></ons-col>
-              <ons-col width="2.5%"></ons-col>
-              <ons-col>NJ</ons-col>
-            </ons-row>
-          </ons-list-item>
-          <ons-list-item style="padding: 0;height:12px; min-height: 12px">
-          </ons-list-item>
-        </ons-list>
-      </div>
-    </ons-card>
-
-    <ons-card>
-      <div class="content">
-        <ons-list modifier="noborder">
-          <ons-list-header class="list-card-header">
-            <ons-row>
-              <ons-col class="list-card-col" align="right" width="25%"><b>Name asd asd asd asdasd asd asd </b></ons-col>
-              <ons-col width="2.5%"></ons-col>
-              <ons-col class="list-card-col">Sean Thomas Smith Sean Thomas Smith Sean Thomas Smith Sean Thomas Smith </ons-col>
-            </ons-row>
-          </ons-list-header>
-          <ons-list-item modifier="nodivider" style="padding: 0;height:24px; min-height: 24px">
-            <ons-row>
-              <ons-col align="right" width="25%"><b>Age</b></ons-col>
-              <ons-col width="2.5%"></ons-col>
-              <ons-col>25</ons-col>
-            </ons-row>
-          </ons-list-item>
-          <ons-list-item modifier="nodivider" style="padding: 0;height:24px; min-height: 24px">
-            <ons-row>
-              <ons-col align="right" width="25%"><b>Address</b></ons-col>
-              <ons-col width="2.5%"></ons-col>
-              <ons-col>1122 Boogy Woogy Avenue</ons-col>
-            </ons-row>
-          </ons-list-item>
-          <ons-list-item modifier="nodivider" style="padding: 0;height:24px; min-height: 24px">
-            <ons-row>
-              <ons-col align="right" width="25%"><b>City</b></ons-col>
-              <ons-col width="2.5%"></ons-col>
-              <ons-col>Point Pleasant Beach</ons-col>
-            </ons-row>
-          </ons-list-item>
-          <ons-list-item modifier="nodivider" style="padding: 0;height:24px; min-height: 24px">
-            <ons-row>
-              <ons-col align="right" width="25%"><b>State</b></ons-col>
-              <ons-col width="2.5%"></ons-col>
-              <ons-col>NJ</ons-col>
-            </ons-row>
-          </ons-list-item>
-          <ons-list-item style="padding: 0;height:12px; min-height: 12px">
-          </ons-list-item>
-        </ons-list>
-      </div>
-    </ons-card>
-
-
-
+      <ons-card>
+        <div class="content">
+          <ons-list modifier="noborder">
+            <ons-list-header class="list-card-header">
+              <ons-row>
+                <ons-col class="list-card-col" align="right" width="25%"><b>Name asd asd asd asdasd asd asd </b>
+                </ons-col>
+                <ons-col width="2.5%"></ons-col>
+                <ons-col class="list-card-col">Sean Thomas Smith Sean Thomas Smith Sean Thomas Smith Sean Thomas Smith</ons-col>
+              </ons-row>
+            </ons-list-header>
+            <ons-list-item modifier="nodivider" style="padding: 0;height:24px; min-height: 24px">
+              <ons-row>
+                <ons-col align="right" width="25%"><b>Age</b></ons-col>
+                <ons-col width="2.5%"></ons-col>
+                <ons-col>25</ons-col>
+              </ons-row>
+            </ons-list-item>
+            <ons-list-item modifier="nodivider" style="padding: 0;height:24px; min-height: 24px">
+              <ons-row>
+                <ons-col align="right" width="25%"><b>Address</b></ons-col>
+                <ons-col width="2.5%"></ons-col>
+                <ons-col>1122 Boogy Woogy Avenue</ons-col>
+              </ons-row>
+            </ons-list-item>
+            <ons-list-item modifier="nodivider" style="padding: 0;height:24px; min-height: 24px">
+              <ons-row>
+                <ons-col align="right" width="25%"><b>City</b></ons-col>
+                <ons-col width="2.5%"></ons-col>
+                <ons-col>Point Pleasant Beach</ons-col>
+              </ons-row>
+            </ons-list-item>
+            <ons-list-item modifier="nodivider" style="padding: 0;height:24px; min-height: 24px">
+              <ons-row>
+                <ons-col align="right" width="25%"><b>State</b></ons-col>
+                <ons-col width="2.5%"></ons-col>
+                <ons-col>NJ</ons-col>
+              </ons-row>
+            </ons-list-item>
+            <ons-list-item style="padding: 0;height:12px; min-height: 12px">
+            </ons-list-item>
+          </ons-list>
+        </div>
+      </ons-card>
+    </ons-list>
 
 
     <!--    <ons-card>-->
-<!--      <div class="content">-->
-<!--        <ons-list-item>-->
-<!--          <ons-row>-->
-<!--            <ons-col align="right" width="25%"><b>Full Name</b></ons-col>-->
-<!--            <ons-col>Sean Thomas Smith</ons-col>-->
-<!--          </ons-row>-->
-<!--        </ons-list-item>-->
-<!--        <ons-list-item>-->
-<!--          <ons-row>-->
-<!--            <ons-col align="right" width="25%"><b>Age</b></ons-col>-->
-<!--            <ons-col>25</ons-col>-->
-<!--          </ons-row>-->
-<!--        </ons-list-item>-->
-<!--        <ons-list-item>-->
-<!--          <ons-row>-->
-<!--            <ons-col align="right" width="25%"><b>Address</b></ons-col>-->
-<!--            <ons-col>1122 Boogy Woogy Avenue</ons-col>-->
-<!--          </ons-row>-->
-<!--        </ons-list-item>-->
-<!--        <ons-list-item>-->
-<!--          <ons-row>-->
-<!--            <ons-col align="right" width="25%"><b>City</b></ons-col>-->
-<!--            <ons-col>Point Pleasant Beach</ons-col>-->
-<!--          </ons-row>-->
-<!--        </ons-list-item>-->
-<!--        <ons-list-item>-->
-<!--          <ons-row>-->
-<!--            <ons-col align="right" width="25%"><b>State</b></ons-col>-->
-<!--            <ons-col>NJ</ons-col>-->
-<!--          </ons-row>-->
-<!--        </ons-list-item>-->
-<!--      </div>-->
-<!--    </ons-card>-->
+    <!--      <div class="content">-->
+    <!--        <ons-list-item>-->
+    <!--          <ons-row>-->
+    <!--            <ons-col align="right" width="25%"><b>Full Name</b></ons-col>-->
+    <!--            <ons-col>Sean Thomas Smith</ons-col>-->
+    <!--          </ons-row>-->
+    <!--        </ons-list-item>-->
+    <!--        <ons-list-item>-->
+    <!--          <ons-row>-->
+    <!--            <ons-col align="right" width="25%"><b>Age</b></ons-col>-->
+    <!--            <ons-col>25</ons-col>-->
+    <!--          </ons-row>-->
+    <!--        </ons-list-item>-->
+    <!--        <ons-list-item>-->
+    <!--          <ons-row>-->
+    <!--            <ons-col align="right" width="25%"><b>Address</b></ons-col>-->
+    <!--            <ons-col>1122 Boogy Woogy Avenue</ons-col>-->
+    <!--          </ons-row>-->
+    <!--        </ons-list-item>-->
+    <!--        <ons-list-item>-->
+    <!--          <ons-row>-->
+    <!--            <ons-col align="right" width="25%"><b>City</b></ons-col>-->
+    <!--            <ons-col>Point Pleasant Beach</ons-col>-->
+    <!--          </ons-row>-->
+    <!--        </ons-list-item>-->
+    <!--        <ons-list-item>-->
+    <!--          <ons-row>-->
+    <!--            <ons-col align="right" width="25%"><b>State</b></ons-col>-->
+    <!--            <ons-col>NJ</ons-col>-->
+    <!--          </ons-row>-->
+    <!--        </ons-list-item>-->
+    <!--      </div>-->
+    <!--    </ons-card>-->
 
 
     <!--    <ons-card>-->
