--- a/play/prototype/index.html
+++ b/play/prototype/index.html
@@ -231,7 +231,23 @@
       <div class="center">About</div>
     </ons-toolbar>
 
+
     <ons-list>
+      <ons-list-item>
+        <div class="button-bar" style="width:280px;">
+          <div class="button-bar__item">
+            <button class="button-bar__button">One thing can be big</button>
+          </div>
+          <div class="button-bar__item">
+            <button class="button-bar__button">Two</button>
+          </div>
+          <div class="button-bar__item">
+            <button class="button-bar__button">Three</button>
+          </div>
+        </div>
+      </ons-list-item>
+
+<!--    <ons-list>-->
       <ons-card>
         <div class="content">
           <ons-list modifier="noborder">
@@ -320,7 +336,23 @@
           </ons-list>
         </div>
       </ons-card>
+
+
+      <ons-list-item>
+        <div class="button-bar" style="width:280px;">
+          <div class="button-bar__item">
+            <button class="button-bar__button">One thing can be big</button>
+          </div>
+          <div class="button-bar__item">
+            <button class="button-bar__button">Two</button>
+          </div>
+          <div class="button-bar__item">
+            <button class="button-bar__button">Three</button>
+          </div>
+        </div>
+      </ons-list-item>
     </ons-list>
+<!--    </ons-list>-->
 
 
     <!--    <ons-card>-->
