--- a/play/prototype/index.html
+++ b/play/prototype/index.html
@@ -8,6 +8,7 @@
   <title>onsen prototype</title>
   <link rel="stylesheet" href="/dist/onsenui/css/onsenui.css">
   <link rel="stylesheet" href="/dist/onsenui/css/onsen-css-components.css">
+<!--  <link rel="stylesheet" href="/dist/onsenui/css/dark-onsen-css-components.css">-->
   <link rel="stylesheet" href="prototype.css">
   <script src="/dist/onsenui/js/onsenui.js"></script>
   <script src="prototype.js"></script>
@@ -124,6 +125,7 @@
         </div>
         <label class="center">
           <ons-input id="birthday-input" type="date" style="min-width:95%"></ons-input>
+          <div class="error">This is an error</div>
         </label>
       </ons-list-item>
       <ons-list-item class="input-items">
@@ -601,7 +603,7 @@
 </ons-splitter>
 </body>
 <script>
-  document.querySelector('#navigator').resetToPage('home.html');
+  document.querySelector('#navigator').resetToPage('form.html');
   // document.querySelector('#menu').open();
 </script>
 <script>
